TPDS revision round 1 done